--- a/live practice 1/index.html
+++ b/live practice 1/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <a href="#" class="logo">
-                <h1>FoodieExpress logo</h1>
+                <h1>FoodieSHOP logo</h1>
             </a>
         <div class="nav-links">
             <a href="#home">Home</a>
